refactored controllers, created a getCollection function to simplify controller logic, added models NEED to add authentication and test
